fix(steamgriddb): style covers to use a beautiful responsive CSS grid and expand layout container height

--- a/src/frontend/components/UI/SteamGridDBPicker/index.scss
+++ b/src/frontend/components/UI/SteamGridDBPicker/index.scss
@@ -2,7 +2,10 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  max-height: 70vh;
+  max-height: 100%;
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
   overflow: hidden;
 
   &__header {
@@ -62,17 +65,17 @@
   }
 
   &__grids {
-    display: flex;
-    flex-wrap: wrap;
-    gap: var(--space-xs);
-    overflow-y: scroll;
-    max-height: 300px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
+    gap: var(--space-sm);
+    overflow-y: auto;
+    max-height: 52vh;
     padding-bottom: 1rem;
+    width: 100%;
   }
 
   &__grid-item {
     cursor: pointer;
-    height: 150px;
     border-radius: 8px;
     overflow: hidden;
     aspect-ratio: 2/3;
@@ -80,6 +83,7 @@
       transform 0.2s,
       outline 0.2s;
     background: var(--background-darker);
+    width: 100%;
 
     &:hover {
       transform: scale(1.05);
@@ -93,8 +97,12 @@
     }
   }
 
+  &--heroes &__grids {
+    grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+    max-height: 52vh;
+  }
+
   &--heroes &__grid-item {
-    height: 100px;
     aspect-ratio: 1600 / 650;
   }
 
